# BinStatAnalyzer

./: CMakeLists.txt  README.md
src/: StatCollection.c  StatCollection.h  StatData.c  StatData.h  StatFileDump.c  StatFileDump.h  main.c
tests/: Test.c  Test.h  TestPool.c  TestPool.h  TestUtility.c
tests/Tests/: AllTests.h  TestAverageSize_1.c  TestAverageSize_1.h  TestAverageSize_2.c  TestAverageSize_2.h  TestAverageSize_3.c  TestAverageSize_3.h  TestAverageSize_4.c  TestAverageSize_4.h  TestAverageSize_5.c  TestAverageSize_5.h  TestAverageSize_6.c  TestAverageSize_6.h  TestEdgeCase_1.c  TestEdgeCase_1.h  TestEdgeCase_2.c  TestEdgeCase_2.h  TestEmptyInput_1.c  TestEmptyInput_1.h  TestEmptyInput_2.c  TestEmptyInput_2.h  TestEmptyInput_3.c  TestEmptyInput_3.h  TestMaxSize_1.c  TestMaxSize_1.h  TestMaxSize_2.c  TestMaxSize_2.h  TestMaxSize_3.c  TestMaxSize_3.h  TestMaxSize_4.c  TestMaxSize_4.h  TestMaxSize_5.c  TestMaxSize_5.h  TestMaxSize_6.c  TestMaxSize_6.h  TestSmallDuplicates_1.c  TestSmallDuplicates_1.h  TestSmallDuplicates_2.c  TestSmallDuplicates_2.h  TestSmallJoin_1.c  (+7 more)
